--- a/Chatty/templates/home.html
+++ b/Chatty/templates/home.html
@@ -94,7 +94,8 @@ body {
     }
     </style>
 
-    <form id="post-form">
+    <form id="post-form" method="POST" action="checkview">
+        {% csrf_token %}
         <label>Room Name</label>
         <input type="text" name="room_name" id="room_name" width="100px" />
         <label>Username</label>
