--- a/Chatty/templates/room.html
+++ b/Chatty/templates/room.html
@@ -138,7 +138,7 @@ setInterval(function(){
 
 </body>
 
-<!-- <script type="text/javascript">
+<script type="text/javascript">
   $(document).on('submit','#post-form',function(e){
     e.preventDefault();
 
@@ -152,11 +152,11 @@ setInterval(function(){
         csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val(),
       },
       success: function(data){
-         //alert(data)
+        alert(data)
       }
     });
     document.getElementById('message').value = ''
   });
-</script> -->
+</script>
 
 </html>
